# pypackage

./: .gitignore  404.html  CHANGELOG.md  example1_pyproject.toml  index.html  mkdocs.yaml  pyproject.toml  releaserc.toml  search.html
.github/workflows/: main.yaml
CHANGELOG/: index.html
about/: index.html
docs/: CHANGELOG.md
search/: search_index.json
src/testmypixipkg/: __init__.py  cli.py
